<resources>
    <string name="app_name">Biblia - Noul Testament</string>
    <string name="new_testament">Noul Testament</string>
    <string name="note">Note</string>
    <string name="back">Înapoi</string>
    <string name="add_note">Adaugă\nnotiță</string>
    <string name="time">00:00</string>
    <string name="previous">previous</string>
    <string name="play_pause">play_pause</string>
    <string name="next">next</string>
    <string name="replay">replay</string>
    <string name="forward">forward</string>
    <string name="book_name">Matei</string>
    <string name="book_chapter">4</string>
    <string name="chapter_unaviable">Acest capitol momentan nu e disponibil</string>
    <string name="notification_name">Biblia - Noul Testament</string>
    <string name="notification_description">Ascultă din Cuvânt și azi!</string>
    <string name="channel_name">Daily Notification</string>
    <string name="channel_description">Channel for daily notifications</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="character">A</string>
    <string name="message">Mesajul in mai multe randuri</string>
    <string name="insert_note">Introduceți notița</string>
    <string name="delete_note_title">Șterge notița</string>
    <string name="delete_note_message">Ești sigur că vrei să ștergi notița?</string>
    <string name="delete_note_button">Șterge</string>
    <string name="delete_note_cancel">Anulează</string>
    <string name="message_min_interval">Puteți crea o notă doar la cel puțin 10 secunde diferență față de precedenta</string>
    <string name="message_max_notes">Nu puteți crea mai mult de 10 notițe pe capitol</string>
    <string name="ok">OK</string>
    <string name="share">Distribuie</string>
</resources>