<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_item"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:background="@drawable/list_click">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/note_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/character"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="3"
        android:paddingStart="48dp"
        android:paddingEnd="32dp"
        android:text="@string/message"
        android:textColor="@color/onSurface"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:background="@null"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/insert_note"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="3"
        android:textColor="@color/onSurface"
        android:textSize="16sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/edit"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toTopOf="@+id/middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/outline"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>